added registration with smtp email verification. created 'env_helper'
