# docs/swagger.json
@@ -44,7 +44,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Регистрация",
+                "summary": "Регистрация (запрос на верификацию почты)",
                 "parameters": [
                     {
                         "description": "Данные для регистрации",
@@ -54,6 +54,30 @@
                         "schema": {
                             "$ref": "#/definitions/dto.RegisterBody"
                         }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/auth/verify": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Регистрация (верификация почты по OTP коду)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Данные для регистрации + код",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {}
